--- a/src/locale/en/components/Login.json
+++ b/src/locale/en/components/Login.json
@@ -1,4 +1,5 @@
 {
+    "Login.title": "Module Name",
     "Login.login": "Log-in",
     "Login.username": "Username",
     "Login.password": "Password"
